--- a/templates/map.html
+++ b/templates/map.html
@@ -14,6 +14,12 @@
 </head>
 <body>
     <h1>Météo de votre vol</h1>
+
+    <!-- Affichage de l'estimation du retard -->
+    <div class="retard-estimation">
+        Estimation du retard sur votre vol à partir de nos modèles : {{ retard_pred }}
+    </div>
+    
     <div id="map"></div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
