--- a/templates/index.html
+++ b/templates/index.html
@@ -62,111 +62,114 @@
     <section>
         <h3>Request Example</h3>
         <code>
-curl -X POST http://flask_app:5000/predict -H "Content-Type: application/json" -d '{
-    "data": [
-        {
-            [...],
-            "arrival": {
-                "actual": "2024-10-30T07:37:00+00:00",
-                "actual_runway": "2024-10-30T07:37:00+00:00",
-                "airport": "Franz Josef Strauss",
-                "baggage": null,
-                "cloudcover": 100.0,
-                "conditions": "Overcast",
-                "delay": 3,
-                "estimated": "2024-10-30T07:35:00+00:00",
-                "estimated_runway": "2024-10-30T07:37:00+00:00",
-                "gate": "K3",
-                "humidity": 100.0,
-                "iata": "MUC",
-                "icao": "EDDM",
-                "icon": "cloudy",
-                "latitude": 48.3539,
-                "longitude": 11.7861,
-                "precip": 0.0,
-                "pressure": 1027.0,
-                "scheduled": "2024-10-30T07:35:00+00:00",
-                "snow": 0.0,
-                "snowdepth": 0.0,
-                "temp": 8.0,
-                "terminal": "2",
-                "timezone": "Europe/Berlin",
-                "visibility": 1.0,
-                "windspeed": 3.6
-            },
-            "departure": {
-                "actual": "2024-10-30T06:21:00+00:00",
-                "actual_runway": "2024-10-30T06:21:00+00:00",
-                "airport": "Charles De Gaulle",
-                "cloudcover": 99.9,
-                "conditions": "Overcast",
-                "delay": 11,
-                "estimated": "2024-10-30T06:10:00+00:00",
-                "estimated_runway": "2024-10-30T06:21:00+00:00",
-                "gate": "67",
-                "humidity": 100.0,
-                "iata": "CDG",
-                "icao": "LFPG",
-                "icon": "cloudy",
-                "latitude": 49.0097,
-                "longitude": 2.5478,
-                "precip": 0.0,
-                "pressure": 1027.0,
-                "scheduled": "2024-10-30T06:10:00+00:00",
-                "snow": 0.0,
-                "snowdepth": 0.0,
-                "temp": 11.0,
-                "terminal": "1",
-                "timezone": "Europe/Paris",
-                "visibility": 3.1,
-                "windspeed": 5.3
-            },
-            "flight": {
-                "codeshared": null,
-                "iata": "LH2239",
-                "icao": "DLH2239",
-                "number": "2239"
-            },
-            "flight_date": "2024-10-30",
-            "flight_status": "landed",
-            "segments": {
-                "100Km": {
+curl -X POST http://flask_app:5000/predict \
+     -H "Content-Type: application/json" \
+     -H "x-api-key: votre_cle_api_secrete" \
+     -d '{
+        "data": [
+            {
+                [...],
+                "arrival": {
+                    "actual": "2024-10-30T07:37:00+00:00",
+                    "actual_runway": "2024-10-30T07:37:00+00:00",
+                    "airport": "Franz Josef Strauss",
+                    "baggage": null,
                     "cloudcover": 100.0,
                     "conditions": "Overcast",
+                    "delay": 3,
+                    "estimated": "2024-10-30T07:35:00+00:00",
+                    "estimated_runway": "2024-10-30T07:37:00+00:00",
+                    "gate": "K3",
                     "humidity": 100.0,
+                    "iata": "MUC",
+                    "icao": "EDDM",
                     "icon": "cloudy",
-                    "latitude": 48.960010677964945,
-                    "longitude": 3.916102484436122,
+                    "latitude": 48.3539,
+                    "longitude": 11.7861,
                     "precip": 0.0,
                     "pressure": 1027.0,
+                    "scheduled": "2024-10-30T07:35:00+00:00",
+                    "snow": 0.0,
+                    "snowdepth": 0.0,
+                    "temp": 8.0,
+                    "terminal": "2",
+                    "timezone": "Europe/Berlin",
+                    "visibility": 1.0,
+                    "windspeed": 3.6
+                },
+                "departure": {
+                    "actual": "2024-10-30T06:21:00+00:00",
+                    "actual_runway": "2024-10-30T06:21:00+00:00",
+                    "airport": "Charles De Gaulle",
+                    "cloudcover": 99.9,
+                    "conditions": "Overcast",
+                    "delay": 11,
+                    "estimated": "2024-10-30T06:10:00+00:00",
+                    "estimated_runway": "2024-10-30T06:21:00+00:00",
+                    "gate": "67",
+                    "humidity": 100.0,
+                    "iata": "CDG",
+                    "icao": "LFPG",
+                    "icon": "cloudy",
+                    "latitude": 49.0097,
+                    "longitude": 2.5478,
+                    "precip": 0.0,
+                    "pressure": 1027.0,
+                    "scheduled": "2024-10-30T06:10:00+00:00",
                     "snow": 0.0,
                     "snowdepth": 0.0,
                     "temp": 11.0,
-                    "time": "2024-10-30T06:20:00",
-                    "visibility": 4.6,
-                    "windspeed": 8.8
+                    "terminal": "1",
+                    "timezone": "Europe/Paris",
+                    "visibility": 3.1,
+                    "windspeed": 5.3
                 },
-                "200Km": {
-                    "cloudcover": 100.0,
-                    "conditions": "Overcast",
-                    "humidity": 96.8,
-                    "icon": "cloudy",
-                    "latitude": 48.89417431243148,
-                    "longitude": 5.281239637348548,
-                    "precip": 0.0,
-                    "pressure": 1027.0,
-                    "snow": 0.0,
-                    "snowdepth": 0.0,
-                    "temp": 10.2,
-                    "time": "2024-10-30T06:30:00",
-                    "visibility": 5.0,
-                    "windspeed": 8.6
+                "flight": {
+                    "codeshared": null,
+                    "iata": "LH2239",
+                    "icao": "DLH2239",
+                    "number": "2239"
                 },
-                [...]
+                "flight_date": "2024-10-30",
+                "flight_status": "landed",
+                "segments": {
+                    "100Km": {
+                        "cloudcover": 100.0,
+                        "conditions": "Overcast",
+                        "humidity": 100.0,
+                        "icon": "cloudy",
+                        "latitude": 48.960010677964945,
+                        "longitude": 3.916102484436122,
+                        "precip": 0.0,
+                        "pressure": 1027.0,
+                        "snow": 0.0,
+                        "snowdepth": 0.0,
+                        "temp": 11.0,
+                        "time": "2024-10-30T06:20:00",
+                        "visibility": 4.6,
+                        "windspeed": 8.8
+                    },
+                    "200Km": {
+                        "cloudcover": 100.0,
+                        "conditions": "Overcast",
+                        "humidity": 96.8,
+                        "icon": "cloudy",
+                        "latitude": 48.89417431243148,
+                        "longitude": 5.281239637348548,
+                        "precip": 0.0,
+                        "pressure": 1027.0,
+                        "snow": 0.0,
+                        "snowdepth": 0.0,
+                        "temp": 10.2,
+                        "time": "2024-10-30T06:30:00",
+                        "visibility": 5.0,
+                        "windspeed": 8.6
+                    },
+                    [...]
+                }
             }
-        }
-    ]
-}'
+        ]
+    }'
         </code>
     </section>
 
