maj index.html de app_admin

--- a/app_admin/templates/index.html
+++ b/app_admin/templates/index.html
@@ -3,46 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DST Airlines API</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-        }
-        h1 {
-            color: #333;
-        }
-        h2 {
-            color: #555;
-        }
-        section {
-            margin-top: 20px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 10px 0;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        code {
-            display: block;
-            padding: 10px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            white-space: pre-wrap;
-            word-break: break-all;
-        }
-    </style>
+    <title>DST Airlines Admin Server</title>
 </head>
 <body>
     <h1>DST Airlines API</h1>
-    <h2>Welcome to the Admin Server !</h2>
+    <h2>Welcome to the Admin Server!</h2>
 </body>
 </html>
